--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
+    "scheme": "loquei_mobile",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
