--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loquei_mobile",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -15,7 +15,10 @@
     "@expo/metro-runtime": "~3.1.3",
     "@types/styled-components-react-native": "^5.2.5",
     "expo": "~50.0.14",
+    "expo-constants": "^15.4.6",
     "expo-font": "~11.10.3",
+    "expo-linking": "^6.2.2",
+    "expo-router": "^3.4.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
