feat - new configurations

--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
       "favicon": "./assets/images/icon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      "expo-router"
     ]
   }
 }
