--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "expo-status-bar": "~1.12.1",
     "loquei_mobile_app": "file:",
     "lucide-react-native": "^0.428.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.31.1",
-    "react-native-svg": "^15.2.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -42,7 +42,7 @@
     "@types/react": "~18.2.45",
     "babel-plugin-module-resolver": "^5.0.2",
     "react-native-svg-transformer": "^1.5.0",
-    "typescript": "^5.3.3"
+    "typescript": "~5.3.3"
   },
   "resolutions": {
     "@react-native-community/cli": "^7.0.0",
