--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "loquei_mobile",
   "version": "1.0.0",
   "scripts": {
+    "dev": "expo start",
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -17,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "expo": "~51.0.31",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
