--- a/eas.json
+++ b/eas.json
@@ -3,16 +3,11 @@
     "version": ">= 11.0.3"
   },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
     "preview": {
-      "distribution": "internal"
-    },
-    "production": {}
-  },
-  "submit": {
-    "production": {}
+      "android": {
+        "buildType": "apk",
+        "image": "latest"
+      }
+    }
   }
 }
