--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.31",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
