--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/cli-platform-android": "^14.0.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "expo": "~51.0.31",
