--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/cli-platform-android": "^14.0.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -34,6 +35,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.2",
     "react-native": "0.74.5",
+    "react-native-calendars": "^1.1307.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-mask-input": "^1.2.3",
@@ -43,6 +45,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
+    "recyclerlistview": "^4.2.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
