--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.59.19",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "expo": "~51.0.31",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
