--- a/eas.json
+++ b/eas.json
@@ -1,13 +1,23 @@
 {
   "cli": {
-    "version": ">= 11.0.3"
+    "version": ">= 13.2.1",
+    "appVersionSource": "remote"
   },
   "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
     "preview": {
       "android": {
-        "buildType": "apk",
-        "image": "latest"
+        "buildType": "apk"
       }
+    },
+    "production": {
+      "autoIncrement": true
     }
+  },
+  "submit": {
+    "production": {}
   }
 }
