--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/config-plugins": "^8.0.0",
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.19",
     "@gluestack-ui/themed": "^1.1.34",
@@ -26,8 +27,10 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "expo": "~51.0.39",
+    "expo-dev-client": "^4.0.29",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
+    "expo-image-manipulator": "~12.0.5",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "loquei_mobile": "file:",
@@ -40,6 +43,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-mask-input": "^1.2.3",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
@@ -47,9 +51,7 @@
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
     "recyclerlistview": "^4.2.1",
-    "yup": "^1.4.0",
-    "expo-dev-client": "^4.0.29",
-    "@expo/config-plugins": "^8.0.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
