--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "expo": "~51.0.39",
+    "expo-build-properties": "~0.12.5",
     "expo-dev-client": "^4.0.29",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
@@ -51,8 +52,7 @@
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.1",
     "recyclerlistview": "^4.2.1",
-    "yup": "^1.4.0",
-    "expo-build-properties": "~0.12.5"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
